# atom

./: .env.example  .gitignore  README.md  config.yaml  inspo.md  pyproject.toml  requirements.lock.txt  requirements.txt
.claude/: settings.json
atom-ui/: index.html  package-lock.json  package.json
atom-ui/src/: App.tsx  RunView.tsx  RunsDashboard.tsx  Workflows.tsx  api.ts  plan.ts  styles.css  subagent.tsx  ui.tsx
skill_library/api-recon-toolkit/: SKILL.md
skill_library/curate-knowledge-base/: SKILL.md
tests/: _secassess_fixtures.py  conftest.py  test_agent_smoke.py  test_agent_trace.py  test_api_recon_burp_cli.py  test_api_recon_burp_helpers.py  test_api_recon_findings.py  test_api_recon_identities.py  test_api_recon_targets.py  test_api_recon_vault_note.py  test_api_recon_vault_ops.py  test_api_security_assessment_workflow.py  test_clarification.py  test_cli.py  test_cli_export.py  test_compaction.py  test_config.py  test_context_overflow.py  test_curate_disconnected_notes.py  test_curate_disconnected_pages.py  test_export.py  test_failed_task_transcript.py  test_instruction_pin.py  test_langfuse_export.py  test_library.py  test_limits.py  test_llm_error.py  test_middleware.py  test_models.py  test_notes.py  test_observability.py  test_observability_config.py  test_observability_provider.py  test_prompts.py  test_recursion_limit.py  test_run_event_bus.py  test_run_log.py  test_runtime_context.py  test_runtime_streaming.py  test_runtime_trace.py  (+24 more)
workflows/: api-security-assessment.yaml  notes-smoke.yaml  parallel-poems.yaml  summarize-doc.yaml
(+151 files in other folders)
